apigw/traefik/auth.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth
spec:
  forwardAuth:
    address: http://auth-service.default.svc.cluster.local/auth
    authResponseHeaders:
      - x-username
      - x-auth-token
      - x-userid

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: auth-routes
spec:
  routes:
    - kind: Rule
      match: PathPrefix(`/`)
      priority: 10 # Добавляем маршрут с большим приоритетом, чтобы эти натсройки применились поверх предыдущих
      services:
        - name: user-chart-service
          namespace: default
          port: 80
      middlewares:
        - name: auth # Включаем forward-auth
          namespace: default
    - kind: Rule
      match: PathPrefix(`/order`)
      priority: 11
      services:
        - name: order-chart-service
          namespace: default
          port: 80
      middlewares:
        - name: strip-order-prefix, auth
          namespace: default
